[RT-104] fix: align back arrow

--- a/packages/react-common-components/src/ui/common/molecules/oc-navigation-breadcrumbs/style.scss
+++ b/packages/react-common-components/src/ui/common/molecules/oc-navigation-breadcrumbs/style.scss
@@ -25,7 +25,6 @@
 			cursor: pointer;
 			img {
 				margin-right: 8px;
-				margin-bottom: 2px;
 			}
 		}
 		&__title {
